Fixed saving and loading creds. App now loads all build.phonegap.com apps too

--- a/master.css
+++ b/master.css
@@ -183,8 +183,6 @@ Loading dialogue
 #modal {
   position: absolute;
   top: 50%; left: 50%;
-  display: -webkit-box;
-  display: box;
   overflow: hidden;
   background-color: rgba(255,255,255,0.7);
   -webkit-box-align: center;
